Update release notes for Pro 1.4.8 to bring first para to the beginning

--- a/_posts/2017-02-09-hangfire.pro-1.4.8.md
+++ b/_posts/2017-02-09-hangfire.pro-1.4.8.md
@@ -4,9 +4,9 @@ category: release
 author: odinserj
 ---
 
-#### Hangfire.Pro
-
 This release contains a bunch of fixes for batches, and is recommended for anyone who use them. Batches now always created in a correct state (Started, Completed or Succeeded), depending of state of its jobs. This is the most important change that fixes weird problems with batches that hanging forever.
+
+**Hangfire.Pro**
 
 * **Fixed** – Batches were hanging indefinitely in a started state, when using continuations for finished jobs.
 * **Fixed** – Batches are always created in a correct state, even if its jobs were already finished.
