Highlight some words in the latest release notes

--- a/_posts/2017-02-09-hangfire.pro-1.4.8.md
+++ b/_posts/2017-02-09-hangfire.pro-1.4.8.md
@@ -4,7 +4,7 @@ category: release
 author: odinserj
 ---
 
-This release contains a bunch of fixes for batches, and is recommended for anyone who use them. Batches now always created in a correct state (Started, Completed or Succeeded), depending of state of its jobs. This is the most important change that fixes weird problems with batches that hanging forever.
+This release contains a bunch of fixes **for batches**, and is **recommended for anyone** who use them. Batches now always created in a correct state (Started, Completed or Succeeded), depending of state of its jobs. This is the most important change that fixes weird problems with batches that hanging forever.
 
 **Hangfire.Pro**
 
