Make links in the latest post absolute for email campaigns

--- a/_posts/2017-03-02-hangfire.pro-2.0.0-beta2.md
+++ b/_posts/2017-03-02-hangfire.pro-2.0.0-beta2.md
@@ -4,7 +4,7 @@ category: release
 author: odinserj
 ---
 
-I'm very excited to write about all of these changes, because they take batches and Hangfire itself to a whole new level by unlocking a lot of usage scenarios. This pre-release adds support for [nested batches](/blog/2017/03/02/hangfire.pro-2.0.0-beta2.html#nested-batches), modifications of [existing batches](/blog/2017/03/02/hangfire.pro-2.0.0-beta2.html#batch-modification), [batch continuations](/blog/2017/03/02/hangfire.pro-2.0.0-beta2.html#more-continuations) for jobs and vice versa, [batch cancellation](/blog/2017/03/02/hangfire.pro-2.0.0-beta2.html#cancellation-of-a-batch) as well as support for [.NET Standard](/blog/2017/03/02/hangfire.pro-2.0.0-beta2.html#net-standard) and configurable batch [expiration time](/blog/2017/03/02/hangfire.pro-2.0.0-beta2.html#configurable-expiration-time).
+I'm very excited to write about all of these changes, because they take batches and Hangfire itself to a whole new level by unlocking a lot of usage scenarios. This pre-release adds support for [nested batches]({{ site.url }}{{ page.url }}#nested-batches), modifications of [existing batches]({{ site.url }}{{ page.url }}#batch-modification), [batch continuations]({{ site.url }}{{ page.url }}#more-continuations) for jobs and vice versa, [batch cancellation]({{ site.url }}{{ page.url }}#cancellation-of-a-batch) as well as support for [.NET Standard]({{ site.url }}{{ page.url }}#net-standard) and configurable batch [expiration time]({{ site.url }}{{ page.url }}#configurable-expiration-time).
 
 ### Nested Batches
 
