Misc fixes for the latest post

--- a/_posts/2017-03-02-hangfire-1.6.9.md
+++ b/_posts/2017-03-02-hangfire-1.6.9.md
@@ -6,4 +6,4 @@ category: release
 
 This is a small correcting release that make it possible to have a workaround for `TimeoutException` exceptions when using **SQL Server** with huge arguments or batches. The `SqlServerOptions.CommandTimeout` option was added to allow to override the default timeout of 30 seconds.
 
-* **Fixed** – `TimeoutException` on large arguments or large batches via `SqlServerOptions.CommandTimeout`.
+**Fixed** – `TimeoutException` on large arguments or large batches via `SqlServerOptions.CommandTimeout`.
