Add a heading to the latest release notes

--- a/_posts/2017-04-17-hangfire.pro.redis-2.1.0.md
+++ b/_posts/2017-04-17-hangfire.pro.redis-2.1.0.md
@@ -16,6 +16,8 @@ GlobalConfiguration.Configuration.UseRedisStorage(
     new RedisStorageOptions { Prefix = "{hangfire}:" });
 ```
 
+### Release Notes
+
 * **Added** – Redis Cluster is fully supported now without requiring RedLock algorithm and additional masters.
 * **Added** – Provide custom certificate selection/validation callbacks via `RedisStorageOptions` class.
 * **Changed** – Custom reconnect logic to solve StackExchange.Redis rare connectivity problems in the cloud.
