Add more details regarding connection resilience

--- a/_posts/2017-04-17-hangfire.pro.redis-2.1.0.md
+++ b/_posts/2017-04-17-hangfire.pro.redis-2.1.0.md
@@ -6,6 +6,8 @@ author: odinserj
 
 Redis Cluster is finally supported. Also improved connection resilience using custom connection loop, upgraded StackExchange.Redis to the latest version and fixed some nasty bugs. So I'd recommend to upgrade, especially if you are using Redis in cloud environments.
 
+### Redis Cluster
+
 Although StackExchange.Redis works with Redis Cluster out of the box, we couldn't just pass cluster endpoints to the constructor of the `RedisStorage` class and relax, expecting all is working fine. Hangfire uses distributed locks to coordinate the work between multiple machines, and proper implementation of distributed locks using Redis requires us to use the [RedLock](https://redis.io/topics/distlock) algorithm. Because replication may fail in very unpleasant places, due to its asynchronous nature in Redis.
 
 But RedLock requires to have minimum 3 Redis instances, detached from the cluster, just to ensure distributed locks are working correctly in corner cases. Since every additional unit of infrastructure greatly increases the complexity of the system in total, I was investigating other ways to keep things simple. And recently I've realized that since distributed locks are only protecting writes to job storage, it's enough to use the `WATCH` command for acquired locks before executing a transaction. So simple, so good, just specify the hash slot using curly braces in prefix:
@@ -15,6 +17,10 @@ GlobalConfiguration.Configuration.UseRedisStorage(
     "redis1,redis2,redis3",
     new RedisStorageOptions { Prefix = "{hangfire}:" });
 ```
+
+### Connection Resilience
+
+I've found out that [under](https://github.com/StackExchange/StackExchange.Redis/issues/38) [some](https://github.com/StackExchange/StackExchange.Redis/issues/194) [rare](https://github.com/StackExchange/StackExchange.Redis/issues/373) [circumstances](https://github.com/StackExchange/StackExchange.Redis/issues/559) (manual failover [also leads](https://github.com/StackExchange/StackExchange.Redis/issues/282) to this problem), connection to a Redis instance isn't restored automatically, until we re-create a multiplexer manually. So I've implemented a custom reconnect policy to handle these cases, without the need to restart a Hangfire Server instance. This feature is particulary useful, if you are using cloud provider to host your Redis instances.
 
 ### Release Notes
 
