Update highlighting for the recent post

--- a/_posts/2017-09-01-hangfire.pro-2.1.0.md
+++ b/_posts/2017-09-01-hangfire.pro-2.1.0.md
@@ -6,31 +6,31 @@ author: odinserj
 
 This release brings full support for continuations in batches, including the nested ones. Now you can create continuations within a batch even for jobs or batches in nested batches. Consider the following sample:
 
-```csharp
-BatchJob.StartNew(parent =>
+<pre><code><span class="type">BatchJob</span>.StartNew(parent =>
 {
-    var nested1 = parent.StartNew(nested =>
+    <span class="keywd">var</span> nested1 = parent.StartNew(nested =>
     {
-        nested.Enqueue(() => Console.WriteLine("Nested 1"));
+        nested.Enqueue(() => <span class="type">Console</span>.WriteLine(<span class="string">"Nested 1"</span>));
     });
 
-    var nested2 = parent.AwaitBatch(nested1, () => Console.WriteLine("Nested 2"));
+    <span class="keywd">var</span> nested2 = parent.AwaitBatch(nested1, () => <span class="type">Console</span>.WriteLine(<span class="string">"Nested 2"</span>));
 
-    var nested3 = parent.AwaitJob(nested2, nested =>
+    <span class="keywd">var</span> nested3 = parent.AwaitJob(nested2, nested =>
     {
-        nested.Enqueue(() => Console.WriteLine("Nested 3"));
+        nested.Enqueue(() => <span class="type">Console</span>.WriteLine(<span class="string">"Nested 3"</span>));
     });
 
-    string nested5 = null;
+    <span class="keywd">string</span> nested5 = <span class="keywd">null</span>;
 
-    var nested4 = parent.AwaitBatch(nested3, nested =>
+    <span class="keywd">var</span> nested4 = parent.AwaitBatch(nested3, nested =>
     {
-        nested5 = nested.Enqueue(() => Console.WriteLine("Nested 4"));
+        nested5 = nested.Enqueue(() => <span class="type">Console</span>.WriteLine(<span class="string">"Nested 4"</span>));
     });
 
-    parent.ContinueWith(nested5, () => Console.WriteLine("Nested 5"));
-});
-```
+    parent.ContinueWith(nested5, () => <span class="type">Console</span>.WriteLine(<span class="string">"Nested 5"</span>));
+});</code></pre>
+
+### Release Notes
 
 * **Added** – Full support for job and batch continuations in nested batches.
 * **Fixed** – Continuations now work properly, when antecedent job/batch and continuation have the same batch
