--- a/_posts/2017-09-20-hangfire-1.6.17.md
+++ b/_posts/2017-09-20-hangfire-1.6.17.md
@@ -6,7 +6,7 @@ category: release
 
 This release contains important improvements when SQL Server is used as a job storage. Distributed locks are much more robust now even when there are significant connectivity issues (like those sometimes happen in Azure or other cloud environments) and require much fewer connections to SQL Server. Another improvement is related to a new option that allows transactions to be committed with fewer round-trips.
 
-This new option is called `SqlServerStorageOptions.CommandBatchMaxTimeout`, is disabled by default currently and works only on .NET Framework. It uses the the internal `SqlCommandSet` class (not available in .NET Core) to queue commands on a client and flush them within a one network call, instead of waiting for confirmation after each command. This method significantly reduces the time required for a transaction to be committed, and decrease wait time for other transactions blocked by the former one. You can enable the new mode in the following way:
+This new option is called `SqlServerStorageOptions.CommandBatchMaxTimeout`, is disabled by default currently and works only on .NET Framework. It uses the internal `SqlCommandSet` class (not available in .NET Core) to queue commands on a client and flush them within a one network call, instead of waiting for confirmation after each command. This method significantly reduces the time required for a transaction to be committed, and decrease wait time for other transactions blocked by the former one. You can enable the new mode in the following way:
 
 <pre><code><span class="type">GlobalConfiguration</span>.Configuration.UseSqlServerStorage(
     <span class="string">"connection_string"</span>, 
