Add "security" category

--- a/_posts/2018-07-21-hangfire-1.6.20.md
+++ b/_posts/2018-07-21-hangfire-1.6.20.md
@@ -1,7 +1,7 @@
 ---
 title: Hangfire 1.6.20
 author: odinserj
-category: release
+category: [release, security]
 ---
 
 This release **contains fixes for security issues** related to dashboard, so it is highly recommended to upgrade. [Cross-Site Request Forgery](https://www.owasp.org/index.php/Cross-Site_Request_Forgery_(CSRF)_Prevention_Cheat_Sheet) protection was added by using existing libraries, but methods are different across application frameworks:
