Update links to GitHub profile on posts

--- a/_posts/2019-10-23-hangfire-1.7.7.md
+++ b/_posts/2019-10-23-hangfire-1.7.7.md
@@ -6,7 +6,7 @@ category: release
 
 This is a maintenance release that contains useful enhancements for Dashboard UI, support for command batching even in .NET Core when using System.Data.SqlClient 4.7.0 and higher, ~~support for the Microsoft.Data.SqlClient package in Hangfire.SqlServer~~ (postponed to 1.7.8) and other minor changes.
 
-Thank you @231293, [timbo](https://github.com/tbertenshaw), [Caio Proiete](https://github.com/caioproiete), @mccj, [Alexander Tsoi](https://github.com/altso), [Ken Dale](https://github.com/kendaleiv) and [Daniel Sturm](https://github.com/danstur) for your help!
+Thank you @231293, [timbo](https://github.com/tbertenshaw), [C. Augusto Proiete](https://github.com/augustoproiete), @mccj, [Alexander Tsoi](https://github.com/altso), [Ken Dale](https://github.com/kendaleiv) and [Daniel Sturm](https://github.com/danstur) for your help!
 
 **Hangfire.Core**
 
@@ -19,7 +19,7 @@ Thank you @231293, [timbo](https://github.com/tbertenshaw), [Caio Proiete](https
 **Dashboard UI**
 
 * **Added** – Allow modification of the Dashboard UI title (by @tbertenshaw).
-* **Added** – Support for HTML tags on the Dashboard UI title (by @caioproiete).
+* **Added** – Support for HTML tags on the Dashboard UI title (by @augustoproiete).
 * **Added** – Buttons for 1,000 and 5,000 items per page in dashboard.
 * **Added** – Links to previous/next pages to the top of the dashboard page.
 * **Changed** – Expose the `RazorPage.Context` property as a public member.
