--- a/_posts/2019-08-06-hangfire-1.7.6.md
+++ b/_posts/2019-08-06-hangfire-1.7.6.md
@@ -4,11 +4,11 @@ author: odinserj
 category: release
 ---
 
-This is yet another maintenance release with added support for dashes in queue names (thanks, @caioproiete), better recurring job error messages in Dashboard UI and some other useful fixes.
+This is yet another maintenance release with added support for dashes in queue names (thanks, @augustoproiete), better recurring job error messages in Dashboard UI and some other useful fixes.
 
 **Hangfire.Core**
 
-* **Changed** – Add support for dash characters (`-`) in queue names (by @caioproiete).
+* **Changed** – Add support for dash characters (`-`) in queue names (by @augustoproiete).
 * **Fixed** – Show actual error in Dashboard UI when recurring job can't be scheduled.
 * **Fixed** – Ensure backward compatibility when JSON payloads are serialized with field names only.
 * **Fixed** – Non-awaited continuations can bring down the whole app when `TaskScheduler` is set to `null`.
