--- a/_posts/2020-04-28-hangfire.pro.redis-2.7.0.md
+++ b/_posts/2020-04-28-hangfire.pro.redis-2.7.0.md
@@ -4,7 +4,7 @@ category: release
 author: odinserj
 ---
 
-This version brings a new method of parsing responsing from Redis in .NET Core that works well even if CLR's thread pool is starved. Dedicated reader threads now used for this purpose when running on Linux or macOS, but on Windows thread pool's I/O threads now used instead to avoid spawning additional threads, since I/O threads work fine there. So upgrades are great for all of the operating systems.
+This version brings a new method of parsing responses from Redis in .NET Core that works well even if CLR's thread pool is starved. Dedicated reader threads now used for this purpose when running on Linux or macOS, but on Windows thread pool's I/O threads now used instead to avoid spawning additional threads, since I/O threads work fine there. So upgrades are great for all of the operating systems.
 
 Also Keepalive option is now set for sockets when running on Windows (all .NET platforms) or even macOS and Linux (when targeting `netcoreapp3.0` and higher) to avoid losing a connection due to firewalls when awaiting a large Redis transaction and latency is really high, since heartbeats aren't working well in this scenario.
 
