Fix different typo mistakes

--- a/_posts/2017-04-17-hangfire.pro.redis-2.1.0.md
+++ b/_posts/2017-04-17-hangfire.pro.redis-2.1.0.md
@@ -20,7 +20,7 @@ GlobalConfiguration.Configuration.UseRedisStorage(
 
 ### Connection Resilience
 
-I've found out that [under](https://github.com/StackExchange/StackExchange.Redis/issues/38) [some](https://github.com/StackExchange/StackExchange.Redis/issues/194) [rare](https://github.com/StackExchange/StackExchange.Redis/issues/373) [circumstances](https://github.com/StackExchange/StackExchange.Redis/issues/559) (manual failover [also leads](https://github.com/StackExchange/StackExchange.Redis/issues/282) to this problem), connection to a Redis instance isn't restored automatically, until we re-create a multiplexer manually. So I've implemented a custom reconnect policy to handle these cases, without the need to restart a Hangfire Server instance. This feature is particulary useful, if you are using cloud provider to host your Redis instances.
+I've found out that [under](https://github.com/StackExchange/StackExchange.Redis/issues/38) [some](https://github.com/StackExchange/StackExchange.Redis/issues/194) [rare](https://github.com/StackExchange/StackExchange.Redis/issues/373) [circumstances](https://github.com/StackExchange/StackExchange.Redis/issues/559) (manual failover [also leads](https://github.com/StackExchange/StackExchange.Redis/issues/282) to this problem), connection to a Redis instance isn't restored automatically, until we re-create a multiplexer manually. So I've implemented a custom reconnect policy to handle these cases, without the need to restart a Hangfire Server instance. This feature is particularly useful, if you are using cloud provider to host your Redis instances.
 
 ### Release Notes
 
