--- a/_posts/2017-04-19-hangfire.pro-2.0.0.md
+++ b/_posts/2017-04-19-hangfire.pro-2.0.0.md
@@ -109,5 +109,5 @@ Run the following code in the Package Manager Console window, or use the Manage 
 
 <pre><code>PM> Update-Package Hangfire.Pro</code></pre>
 
-The only thigs is changed in Hangfire.Pro 2.0.0 is the type of some arguments in the `IBatchJobClient` interface and `BatchJob` class. `ContinueWith` methods became obsolete to be replaced with `AwaitBatch` for consistency with the new features. So, recompilation is required, but **storage schema is the same**.
+The only thing changed in Hangfire.Pro 2.0.0 is the type of some arguments in the `IBatchJobClient` interface and `BatchJob` class. `ContinueWith` methods became obsolete to be replaced with `AwaitBatch` for consistency with the new features. So, recompilation is required, but **storage schema is the same**.
 
