--- a/_posts/2015-01-29-hangfire-1.3.3-released.md
+++ b/_posts/2015-01-29-hangfire-1.3.3-released.md
@@ -7,7 +7,7 @@ redirect_from:
 - /2015/01/29/hangfire-1.3.3-released.html
 ---
 
-This is a correcting release. Fixed a bug related to MSMQ or RabbitMQ extensions, when enqueued job is not processed and "stucked" in the *Enqueued* state indefinitely until we retry it manually.
+This is a correcting release. Fixed a bug related to MSMQ or RabbitMQ extensions, when enqueued job is not processed and "stuck" in the *Enqueued* state indefinitely until we retry it manually.
 
 ### Release Notes
 
