Fix some spelling and grammatical errors

--- a/_posts/2016-08-10-hangfire.pro.redis-2.0.md
+++ b/_posts/2016-08-10-hangfire.pro.redis-2.0.md
@@ -44,6 +44,6 @@ Currently .NET Core support comes only with the separate version, `2.0.0-netcore
 
 ### Limitations
 
-Despite of StackExchange.Redis library does support some of the following features, we can't use them immediately. For example, to support high availability via master/slave replication, we should first implement the [Redlock algorithm](http://redis.io/topics/distlock) to ensure that distributed locks are working correctly in corner cases. For Cluster support, together with Redlock, we should ensure that subscriptions are working properly all the time.
+Despite StackExchange.Redis library does support some of the following features, we can't use them immediately. For example, to support high availability via master/slave replication, we should first implement the [Redlock algorithm](http://redis.io/topics/distlock) to ensure that distributed locks are working correctly in corner cases. For Cluster support, together with Redlock, we should ensure that subscriptions are working properly all the time.
 
 So, multiple endpoints, Redis Cluster and Redis Sentinel aren't supported yet.
