Generate recent news from blog articles, not from Twitter

--- a/_posts/2020-01-21-hangfire-1.7.9.md
+++ b/_posts/2020-01-21-hangfire-1.7.9.md
@@ -1,7 +1,8 @@
 ---
 title: Hangfire 1.7.9
 author: odinserj
-category: release
+category: [release, news]
+summary: Fixed possible DbConnection leak, reduced database load when using sub-second polling interval and minor Dashboard UI improvements
 ---
 
 New version contains important changes for Hangfire.SqlServer package, fixing a possible `DbConnection` leak after a database was taken offline and reducing the database load when sub-second polling interval is used. There are also some minor improvements for the Dashboard UI. 
