--- a/_posts/2020-03-17-hangfire.pro.redis-2.6.0.md
+++ b/_posts/2020-03-17-hangfire.pro.redis-2.6.0.md
@@ -1,7 +1,8 @@
 ---
 title: Hangfire.Pro.Redis 2.6.0 & 2.6.1
-category: release
+category: [release, news]
 author: odinserj
+summary: Many internal improvements and the new MultiplexerPoolSize option to use multiple connections in the same storage
 ---
 
 The new version brings a lot of improvements to the internal implementation of Hangfire.Pro.Redis itself and its underlying Redis client – ability to use multiple connections within the same storage, improved request/response processing pipeline, TLS 1.2 enabled by default for encrypted connections and other improvements and fixes.
