--- a/_posts/2020-04-15-hangfire-1.7.11.md
+++ b/_posts/2020-04-15-hangfire-1.7.11.md
@@ -1,7 +1,8 @@
 ---
 title: Hangfire 1.7.11 & 1.6.29
 author: odinserj
-category: release
+category: [release, news]
+summary: Important fixes for processing pipeline, built-in support for reliable ASP.NET shutdown detection and better recurring jobs page
 ---
 
 These versions contain important fixes for the whole processing pipeline, including fire-and-forget, delayed and recurring jobs in the presence of custom extension filters that can throw exceptions. Also a built-in support for reliable shutdown detection of ASP.NET applications was added to the Hangfire.Core package to prevent running old code base when the new one is already deployed. And recurring jobs page in 1.7.11 now displays all the exceptions that prevent a particular recurring job from being scheduled. 
