--- a/_posts/2020-10-06-hangfire.pro.redis-2.8.0.md
+++ b/_posts/2020-10-06-hangfire.pro.redis-2.8.0.md
@@ -1,7 +1,8 @@
 ---
 title: Hangfire.Pro.Redis 2.8.0
-category: release
+category: [release, news]
 author: odinserj
+summary: Much better performance for transactions, locks and fetching from multiple queues
 ---
 
 This version contains the most important changes for request/response processing pipeline since version 2.1 in terms of performance. LUA scripting feature is now used to implement transactions with proper locking, and it is much more efficient than the previous implementation based on conditional transactions. Less round-trips, reduced impact caused by latency, optimized distributed locks and better fetching from multiple queues makes this release so important, especially when using the package in a cloud environment.
