--- a/_posts/2022-10-14-hangfire.throttling-1.4.0.md
+++ b/_posts/2022-10-14-hangfire.throttling-1.4.0.md
@@ -1,7 +1,8 @@
 ---
 title: Hangfire.Throttling 1.4.0
-category: release
+category: [release, news]
 author: odinserj
+summary: As with mutexes, it is now possible to apply a semaphore to the entire batch by using a special technique.
 ---
 
 As with mutexes, it is now possible to apply a semaphore to the entire batch by using a special technique, please see the [Throttling Batches](https://docs.hangfire.io/en/latest/background-processing/throttling.html#throttling-batches) section for details.
