--- a/_posts/2022-10-31-hangfire.pro-2.3.2.md
+++ b/_posts/2022-10-31-hangfire.pro-2.3.2.md
@@ -1,7 +1,8 @@
 ---
 title: Hangfire.Pro 2.3.2
-category: release
+category: [release, news]
 author: odinserj
+summary: Avoid stuck batches if background job's state of a batch continuation changed externally.
 ---
 
 This patch version fixes possible "stuck batch" issue when state of a job inside a batch continuation is changed externally before that batch continuation is started. Such state transitions shouldn't be used, because they violate encapsulation, but nevertheless while they aren't prohibited by the code, we should handle such cases somehow.
