--- a/_posts/2022-11-21-hangfire-1.7.32.md
+++ b/_posts/2022-11-21-hangfire-1.7.32.md
@@ -1,7 +1,8 @@
 ---
 title: Hangfire 1.7.32
 author: odinserj
-category: release
+category: [release, news]
+summary: Maintenance release with added Swedish translation of the Dashboard UI and other minor tweaks.
 ---
 
 Maintenance release with added Swedish translation of the Dashboard UI and other minor tweaks.
