--- a/_posts/2023-01-31-hangfire-1.7.33.md
+++ b/_posts/2023-01-31-hangfire-1.7.33.md
@@ -1,7 +1,8 @@
 ---
 title: Hangfire 1.7.33
 author: odinserj
-category: release
+category: [release, news]
+summary: Better waiting logic for sliding invisibility-based fetch, SQL server as a time authority for heartbeats.
 ---
 
 Patch release that implements sliding invisibility-based fetch logic with waiting on client's side instead of SQL Server's one (so wait statistics will be clear now) and uses SQL Server as a time authority for server heartbeats (unsynchronized clock will not cause servers to suddently disappear). Also implemented `IAsyncDisposable` support for service scopes in modern .NET Core applications.
