--- a/_posts/2020-04-28-hangfire.pro.redis-2.7.0.md
+++ b/_posts/2020-04-28-hangfire.pro.redis-2.7.0.md
@@ -1,7 +1,8 @@
 ---
 title: Hangfire.Pro.Redis 2.7.0 & 2.7.1
-category: release
+category: [release, news]
 author: odinserj
+summary: Better response reader implementation in .NET Core and keepalive support for sockets
 ---
 
 This version brings a new method of parsing responses from Redis in .NET Core that works well even if CLR's thread pool is starved. Dedicated reader threads now used for this purpose when running on Linux or macOS, but on Windows thread pool's I/O threads now used instead to avoid spawning additional threads, since I/O threads work fine there. So upgrades are great for all of the operating systems.
