--- a/_posts/2022-12-20-hangfire.pro.redis-2.8.20.md
+++ b/_posts/2022-12-20-hangfire.pro.redis-2.8.20.md
@@ -1,7 +1,8 @@
 ---
 title: Hangfire.Pro.Redis 2.8.20
-category: release
+category: [release, news]
 author: odinserj
+summary: Compatibility patch for highly popular Hangfire.Console extension when CLR's Thread Pool is starved.
 ---
 
 This version has a compatibility patch for highly popular Hangfire.Console extension so it can't slow down the background processing when CLR's Thread Pool is starved.
