Publish release nots for 1.8.0-rc3

--- a/_posts/2023-03-30-hangfire-1.8.0-rc3.md
+++ b/_posts/2023-03-30-hangfire-1.8.0-rc3.md
@@ -68,8 +68,13 @@ Perhaps it's also worth noting that new changes allow delayed background jobs wi
 <div class="alert alert-warning">
     <h4>Storage Support Required</h4>
     <p>
-    The new feature requires job storage to persist a new field, which storage may not support out-of-the-box. That's why additional storage support is required. Otherwise, the <code>NotSupportedException</code> will be thrown. So upgrade of the job storage package is likely needed.
+    The new feature requires job storage to persist a new field, which storage may not support out-of-the-box. That's why additional storage support is required. Otherwise, the <code>NotSupportedException</code> will be thrown. So upgrade of the job storage package is likely needed. Currently the following storages support this feature:
     </p>
+    <ul>
+        <li>Hangfire.SqlServer 1.8.0-rc3</li>
+        <li>Hangfire.Pro.Redis 3.0.0-beta2</li>
+        <li>Hangfire.InMemory 0.4.0-beta1</li>
+    </ul>
 </div>
 
 Specifying an explicit queue name for recurring-based background jobs is also possible, as shown in the snippet below. However, please note that recurring jobs will not be filtered based on such queue, and queue name will be used only when creating a background job on its schedule. So unfortunately, it's still impossible to use the same storage for recurring jobs from different code bases, but the new release also contains changes that will make this possible.
